<resources>
    <string name="app_name">MyApp</string>
    <string name="btn">hello</string>
    <string name="exchangeRate">ExchangeRate</string>
    <string name="btn2dollar">Dollar</string>
    <string name="btn2euro">EURO</string>
    <string name="btn2won">WON</string>
    <string name="opencfgc">set</string>
    <string name="btn_dollar_label">Dollar</string>
    <string name="btn_euro_label">Euro</string>
    <string name="btn_won_label">Won</string>
    <string name="rmb_hint">Imput RMB</string>
    <string name="btn_opencfg_label">config</string>
    <string name="btn_save_label">save</string>
    <string name="menu_set_label">Setting</string>
</resources>
